# sndoc

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/sndoc/: SKILL.md
.github/workflows/: release.yml  test.yml
docs/: BILL_OF_MATERIALS.md
installer/: installer.iss
legacy-python/: sndoc_main.py
legacy-python/sndoc/: __init__.py  mcp_server.py
legacy-python/sndoc/core/: chunk.py  constants.py  fetch.py  models.py
legacy-python/tests/: conftest.py  test_cli.py  test_index_store.py  test_mcp.py  test_repo.py  test_state.py
sndoc/: cli.py  index.py  mcp_server.py  state.py
sndoc/core/: __init__.py  embed.py  format.py  index_store.py  repo.py  search.py
src/: index.rs  lib.rs  main.rs  mcp.rs  state.rs
src/core/: chunk.rs  constants.rs  embed.rs  fetch.rs  format.rs  http.rs  index_store.rs  mod.rs  models.rs  repo.rs  search.rs
tests/: git_backend.rs  test_chunk.py  test_fetch.py  test_repo.py
