[package]
name = "sndoc"
version = "0.3.0"
edition = "2021"
description = "Local-first CLI for ServiceNow product documentation: hybrid search + fetch as Markdown, usable by humans and AI agents. Also exposes an MCP stdio server."
license = "MIT"
rust-version = "1.82"

[[bin]]
name = "sndoc"
path = "src/main.rs"

[lib]
name = "sndoc"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
directories = "6"
gix = { version = "0.83.0", default-features = false, features = ["blocking-http-transport-reqwest-rust-tls", "max-performance-safe", "sha1"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
once_cell = "1.21.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sqlite-vec = "0.1.9"
model2vec-rs = "0.2.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
rmcp = { version = "2.2.0", features = ["macros", "schemars", "server", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
schemars = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
