[project]
name = "sndoc-mcp"
version = "0.2.0"
description = "Local-first CLI for ServiceNow product documentation: hybrid search + fetch as Markdown, usable by humans and AI agents. Also exposes an MCP stdio server."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16",
    "platformdirs>=4.3",
    "model2vec>=0.8.2",
    "sqlite-vec>=0.1.9",
    "pysqlite3-binary>=0.5.4 ; sys_platform == 'linux'",
    "python-frontmatter>=1.3",
    "httpx>=0.28",
    "numpy>=2.1",
    "mcp>=1.27",
]

[project.scripts]
sndoc = "sndoc.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    # Native onefile binary builds (see .github/workflows/release.yml).
    "nuitka>=2.4",
    "ordered-set>=4.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sndoc", "sndoc.core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
